campus info fixed images and spacing and styling

--- a/resources/style.css
+++ b/resources/style.css
@@ -267,30 +267,109 @@ nav .items {
     display: none;
   }
 
-  .side.column {
+  .information.container .side.column {
+    display: none;
+  }
+
+  .information .mobile.side-column {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+  }
+
+  .mobile.side-column .title a {
+    width: 100%;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+  }
+
+  .mobile.side-column .title p {
+    width: 100%;
+    padding-left: 1rem;
+  }
+
+  .mobile.side-column .title h3 {
+    padding-left: 1rem;
     width: 100%;
   }
 
-  .side.colum .title a {
-    width: 100%;
-  }
-
-  .side.column .title p {
-    width: 100%;
-  }
-
-  .side.column .title {
+  .mobile.side-column .title {
     display: flex;
     flex-direction: column;
   }
 
-  .side.column .title.keynote {
+  /*.mobile.side-column .title.keynote {
+    width: 100%;
+  }*/
+
+  .mobile.side-column .title {
     width: 100%;
   }
 
-  .side.column .title {
+  .mobile.side-column .info {
+    max-width: 100%;
+  }
+
+  .mobile.side-column .title img {
+    width: 100%;
+    height: 15rem;
+    padding-right: 0;
+    overflow: hidden;
+  }
+
+  .mobile.side-column .title.keynote img {
+    width: 100%;
+    height: 50%;
+    padding-right: 0;
+    overflow: hidden;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .mobile.side-column .mobile-keynote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+}
+
+  .mobile.side-column .title.keynote {
+    background-color: white;
+    display: flex;
     width: 100%;
   }
+
+.mobile.side-column .mobile-keynote h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #4A4A4A;
+  margin-bottom: .5rem;
+  max-width: 100%;
+  overflow: hidden;
+  padding-left: 1rem;
+  }
+
+.mobile.side-column .mobile-keynote p {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5;
+  color: #A8A8A8;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+  .side.column .title.keynote .info.keynote{
+    display: none;
+  }
+}
+
+.side.column .mobile.keynote {
+  display: none;
 }
 
 .information .practicing {
@@ -386,6 +465,7 @@ nav .items {
 
 .info a {
   margin-top: .5rem;
+  width: 100%;
 }
 
 /*Pracice Container End*/
